# ARC-MLFlow

./: .gitignore  NOTES.md  README.md  pyproject.toml
.github/workflows/: build.yaml
azure-deployment/: aci.yaml  aci_template.yaml  deploy.sh  steps_container.sh
mlflow-container/: Dockerfile  README.md  compose.yaml  local_start.sh  start_mlflow_server.sh
mlflow-examples/: hello.py  sweep.py  train.py
